# libnfc-rust

./: Cargo.toml
libnfc/: Cargo.toml
libnfc-sys/: Cargo.toml  build.rs
libnfc-sys/src/: lib.rs
libnfc/src/: lib.rs
nfc-test/: Cargo.toml
nfc-test/src/: main.rs
