[package]
name = "libnfc"
version = "0.1.0"
description = "Bindings to the libnfc API for low-level NFC communication"
authors = ["Ellie Lilja <elililjaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
libnfc-sys = { version = "0.1.0", path = "../libnfc-sys" }

